# OpenGlCpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  metadata.h.in
src/: main.cpp  opengl_object.hpp  shader.cpp  shader.hpp
src/util/: CMakeLists.txt  file_reader.hpp  glfw.hpp  monitor.hpp  reader.cpp  reader.hpp  window.hpp
src/util/test/: util_test.cpp  util_test.h.in
